modified services and frontend design

--- a/easymeds-product-service/src/main/resources/application.properties
+++ b/easymeds-product-service/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=easymeds-product-service
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress=true
 
-spring.data.mongodb.uri=mongodb://localhost:27017/medicare
+spring.data.mongodb.uri=mongodb://localhost:27017/easymeds
