--- a/easymeds-authentication-service/src/main/resources/application.properties
+++ b/easymeds-authentication-service/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port = 8600
 spring.application.name = authentication-service
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 eureka.client.instance.preferIpAddress = true
-spring.data.mongodb.uri = mongodb://localhost:27017/medicare
+spring.data.mongodb.uri = mongodb://localhost:27017/easymeds
